--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -66,31 +66,38 @@
 
 #super-deals {
     padding: 40px 0;
-    .right-supers-deals{
+
+    .right-supers-deals {
         display: flex;
         align-items: center;
-        i{
+
+        i {
             cursor: pointer;
-            &:hover{
+
+            &:hover {
                 color: #1863d4;
             }
         }
-        span{
+
+        span {
             margin-right: 10px;
             cursor: pointer;
-            &:hover{
+
+            &:hover {
                 color: #1863d4;
             }
         }
     }
-    h3{
+
+    h3 {
         display: inline;
     }
+
     .coming-time {
         display: inline-block;
-        
-        
-        .time-count{
+
+
+        .time-count {
             padding-left: 20px;
             display: inline-block;
             background: #252525;
@@ -108,40 +115,48 @@
             padding: 9px 10px;
             font-size: 9px;
             width: 47px;
-            span{
+
+            span {
                 display: block;
                 font-size: 20px;
             }
-            
+
 
         }
-        .sec{
+
+        .sec {
             background-color: #f7ba01;
         }
     }
 }
-#products-index-html{
-    .product-items{
+
+#products-index-html {
+    .product-items {
         position: relative;
         text-align: center;
-        &:hover{
-            & .hover-detail{
+
+        &:hover {
+            & .hover-detail {
                 opacity: 1;
                 visibility: visible;
                 height: 80px;
             }
         }
-        p{
+
+        p {
             color: #ff6000;
-            span{
+
+            span {
                 margin-right: 10px;
                 color: #858585;
             }
         }
-        img{
+
+        img {
             width: 100%;
         }
-        .hover-detail{
+
+        .hover-detail {
             position: absolute;
             bottom: 80px;
             left: 40px;
@@ -151,23 +166,296 @@
             height: 0;
             transition: .5s all;
             overflow: hidden;
-            .top{
+
+            .top {
                 background-color: #ffffff;
-                
-                svg{
-                    margin:  0  15px 10px ;
+
+                svg {
+                    margin: 0 15px 10px;
                 }
             }
-           
-            button{
+
+            button {
                 width: 100%;
                 background-color: #3a3a3a;
-                border: none;              
+                border: none;
 
                 color: #ffffff;
                 padding: 10px 0;
             }
         }
     }
+
+}
+
+#flip-effect {
+    padding: 150px 0;
+
+    .all {
+        div {
+            .hover-rotate {
+                img {
+                    margin-bottom: 30px;
+                    transform: rotateY(0deg);
+                    transition: 1s transform;
+                }
+
+                &:hover {
+
+                    & h6 {
+                        color: #1863d4;
+                    }
+
+                    & img {
+                        transform: rotateY(360deg)
+                    }
+                }
+            }
+
+            text-align: center;
+
+            span {
+                display: block;
+                font-size: 14px;
+                font-weight: 500;
+                color: #958585;
+            }
+
+            h6 {
+                transition: .5s all;
+
+            }
+        }
+    }
+}
+
+#deals-of-day {
+    .container {
+        padding: 0 40px !important;
+        max-width: 1500px
+    }
+
+
+    .top-left,
+    .buttom-side {
+        .overlay {
+            background-color: #2525256d;
+            padding: 50px 0;
+
+        }
+
+
+        background-image: url(https://ninetheme.com/themes/venam/v1/wp-content/uploads/2021/06/sblog_thumb04.jpg);
+
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        h6,
+        h3,
+        p,
+        a {
+            margin-left: 30px;
+            color: white;
+            padding: 10px 0;
+        }
+
+        a {
+
+            background-color: #ff6000;
+            padding: 8px 15px;
+        }
+    }
+
+    .buttom-side {
+        background-image: url(https://ninetheme.com/themes/venam/v1/wp-content/uploads/2021/08/banner2.jpg);
+
+    }
+
+    .top-right {
+        p {
+            color: #ff6000;
+            font-size: 12px;
+            font-weight: 500;
+            text-transform: uppercase
+        }
+
+        a {
+            color: #ff6000;
+        }
+    }
+
+    .mid-right {
+
+        .product-items {
+            position: relative;
+            text-align: center;
+
+            &:hover {
+                & .hover-detail {
+                    opacity: 1;
+                    visibility: visible;
+                    height: 80px;
+                }
+            }
+
+            p {
+                color: #ff6000;
+
+                span {
+                    margin-right: 10px;
+                    color: #858585;
+                }
+            }
+
+            img {
+                width: 100%;
+            }
+
+            .hover-detail {
+                position: absolute;
+                bottom: 80px;
+                left: 4px;
+                width: 100%;
+                opacity: 0;
+                visibility: hidden;
+                height: 0;
+                transition: .5s all;
+                overflow: hidden;
+
+                .top {
+                    background-color: #ffffff;
+
+                    svg {
+                        margin: 0 15px 10px;
+                    }
+                }
+
+                button {
+                    width: 100%;
+                    background-color: #3a3a3a;
+                    border: none;
+
+                    color: #ffffff;
+                    padding: 10px 0;
+                }
+            }
+        }
+    }
+
+    .buttom-right {
+        text-align: center;
+        ul {
+            display: flex;
+            justify-content: space-between;
+
+            li {
+                font-size: 12px;
+                font-weight: 500;
+                display: block;
+                line-height: 1;
+                color: #909090
+            }
+        }
+
+        p 
+        {
+            text-align: center;
+            font-size: 16px;
+            font-weight: 500;           
+            line-height: 1;
+            color: #909090;
+            span{
+                color: #f7ba01
+            }
+        }
+        .coming-time {
+            
+            width: 100%;
     
+    
+            .time-count {
+               
+                padding-left: 20px;
+                display: inline-block;
+                background: #252525;
+                color: #fff;
+                font-size: 12px;
+                font-weight: 500;
+                text-transform: uppercase;
+                padding: 8px 12px;
+                border-radius: 4px;
+                text-align: center;
+                margin-left: 6px;
+                width: 52px;
+                line-height: 1;
+                margin: 0 3px 0;
+                padding: 9px 10px;
+                font-size: 9px;
+                width: 47px;
+    
+                span {
+                    display: block;
+                    font-size: 20px;
+                }
+    
+    
+            }
+    
+            .sec {
+                background-color: #f7ba01;
+            }
+        }
+    }
+
+
+
+}
+#futured-products{
+    padding: 100px 0 ;
+    #hover-div{
+        margin-bottom: 20px;
+        transition: 1s all;
+        border: 2px solid transparent;
+        &:hover{
+            border: 2px solid black;
+        }
+    }
+    .top{
+        padding: 50px 0;
+        a{
+            font-size: 13px;
+            color:#ff6000
+        }
+    }
+    .buttom{
+        img{
+            width: 100%;
+        }
+        p{
+            font-size: 15px;
+            color: #ff6000;
+            font-family: thin;
+            margin-bottom: 0;
+        }
+        i{
+            color: #f7ba01;
+            font-size: 10px;
+        }
+
+    }
+   
+}
+#best-selling-products{
+    .top{
+        padding-bottom: 60px;
+        text-align: center;
+        p{
+            font-size: 14px;
+            color: #ff6000;
+        }
+    }
+    .buttom{
+        
+    }
 }
